mouse movement corresponds to levers in a circle

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 canvas{
     border: solid black 1px;
-    margin: auto;
-    width: 100%;
-    height: 98.3vh;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
