--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     padding: 30px;
 
 }
+#timeHolder{
+    left: 50%;
+    text-align: center;
+    font-size: 50px;
+}
 
 #main{
     position: fixed;
